@@ -8,8 +8,9 @@ ipython (0.13-1) unstable; urgency=low
   * drop libjs-jquery-ui dependency, use the embedded development branch
   * don't compress the examples
   * remove executable permissions on embedded codemirror files
+  * build with LC_ALL=C.UTF-8 to avoid a unicode issue in setupbase.py
 
- -- Julian Taylor <jtaylor.debian@googlemail.com>  Sat, 30 Jun 2012 12:37:21 +0200
+ -- Julian Taylor <jtaylor.debian@googlemail.com>  Sat, 30 Jun 2012 12:50:17 +0200
 
 ipython (0.12.1+dfsg-2) unstable; urgency=low
 
